* 2014-05-28 - thorben.betten@open-xchange.com

 - Fix for bug 32796: Proper handling of special "*" query during task search

* 2014-05-28 - martin.schneider@open-xchange.com

 - Fix for bug 32784: Prepare file sizes for error messages to be human readable

* 2014-05-27 - thorben.betten@open-xchange.com

 - Fix for bug 32732: Orderly detect a duplicate lead request

* 2014-05-23 - thorben.betten@open-xchange.com

 - Fix for bug 32708: Fixed forwarding of mails from Unified Mail
 - Fix for bug 32625: Keep subscription statuses when moving IMAP folders

* 2014-05-22 - thorben.betten@open-xchange.com

 - Fix for bug 32677: Do net set SMTP credentials if not explicitly set + several sanitizing operations to ensure SMTP authentication does still work
 - Fix for bug 32692: Ignore alternative XML part

* 2014-05-21 - thorben.betten@open-xchange.com

 - Fix for bug 32652: Do also consider pre-auth capabilities when checking for a secure connection
 - Fix for bug 32651: Do not overwrite settings fetched from config-cascade in JSON merge
 - Fix for bug 32409: Check retrieved document against passed folder identifier (if any)
 - Fix for bug 32226: Fixed regex used for look-up of referenced inline images

* 2014-05-21 - ioannis.chouklis@open-xchange.com

 - Fix for bug 31798: Implemented a ClusterLockService with which a cluster wide lock can be acquired in order for single nodes to run periodic tasks

* 2014-05-20 - thorben.betten@open-xchange.com

 - Fix for bug 28175: Tag wording for detected configuration flaws explicitly as "Warning"
 - Fix for bug 32633: Drop all remnants for obsolete POP3 tables
 - Fix for bug 32643: Check for possibly empty map prior to coercing to a JSON object
 - Fix for bug 31962: Properly detect EAS ping request in case of base64-encoded binary data in request's query string

* 2014-05-19 - thorben.betten@open-xchange.com

 - Fix for bug 32481: Ignore requests to LinkedIn JSON API if no LinkedIn OAuth account is available for associated user